force-app/main/default/objects/Budget__c/Budget__c.object-meta.xml
<CustomObject>
    <description>Immutable, versioned engagement economics governed by Resource 360.</description>
    <label>Budget</label>
    <nameField>
        <displayFormat>BUD-{00000}</displayFormat>
        <label>Budget Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>