force-app/main/default/objects/Budget__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>