force-app/main/default/objects/Budget__c/fields/Approval_Step__c.field-meta.xml
<CustomField><fullName>Approval_Step__c</fullName><defaultValue>0</defaultValue><label>Approval Step</label><precision>3</precision><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>