force-app/main/default/objects/Budget__c/fields/Base_Labour__c.field-meta.xml
<CustomField>
    <fullName>Base_Labour__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Base Labour</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>