force-app/main/default/objects/Budget__c/fields/Blended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Blended_Cost__c</fullName>
    <formula>IF(Planned_Hours__c = 0, 0, Total_Cost__c / Planned_Hours__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>