force-app/main/default/objects/Budget__c/fields/Burdened_Labour__c.field-meta.xml
<CustomField>
    <fullName>Burdened_Labour__c</fullName>
    <formula>Base_Labour__c * (1 + Uplift_Percent__c) * (1 + Effort_Contingency_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burdened Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>