force-app/main/default/objects/Budget__c/fields/Current__c.field-meta.xml
<CustomField><fullName>Current__c</fullName><defaultValue>true</defaultValue><label>Current Version</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>