force-app/main/default/objects/Budget__c/fields/Economic_Signature__c.field-meta.xml
<CustomField>
    <fullName>Economic_Signature__c</fullName>
    <label>Economic Signature</label>
    <length>128</length>
    <type>Text</type>
</CustomField>