force-app/main/default/objects/Budget__c/fields/Estimate_To_Complete__c.field-meta.xml
<CustomField><fullName>Estimate_To_Complete__c</fullName><description>Forecast remaining cost.</description><label>Estimate to Complete</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>