force-app/main/default/objects/Budget__c/fields/Forecast_Accuracy_Percent__c.field-meta.xml
<CustomField><fullName>Forecast_Accuracy_Percent__c</fullName><description>Accuracy of prior-period forecast versus realized value.</description><label>Forecast Accuracy Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>