force-app/main/default/objects/Budget__c/fields/Forecast_Cost__c.field-meta.xml
<CustomField><fullName>Forecast_Cost__c</fullName><description>Latest forecast cost through completion.</description><label>Forecast Cost</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>