force-app/main/default/objects/Budget__c/fields/Forecast_Margin_Percent__c.field-meta.xml
<CustomField><fullName>Forecast_Margin_Percent__c</fullName><description>Latest forecast gross margin percentage.</description><label>Forecast Margin Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>