force-app/main/default/objects/Budget__c/fields/Forecast_Revenue__c.field-meta.xml
<CustomField><fullName>Forecast_Revenue__c</fullName><description>Latest forecast revenue through completion.</description><label>Forecast Revenue</label><precision>18</precision><scale>2</scale><trackHistory>false</trackHistory><type>Currency</type></CustomField>