force-app/main/default/objects/Budget__c/fields/Margin_Erosion_Points__c.field-meta.xml
<CustomField><fullName>Margin_Erosion_Points__c</fullName><description>Approved-budget margin less current forecast margin, in percentage points.</description><label>Margin Erosion Points</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>