force-app/main/default/objects/Budget__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>IF(Revenue__c = 0, 0, Gross_Margin__c / Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>