force-app/main/default/objects/Budget__c/fields/Onsite_Months__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Onsite Person Months</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>