force-app/main/default/objects/Budget__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planned Hours</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>