force-app/main/default/objects/Budget__c/fields/Policy_Version__c.field-meta.xml
<CustomField><fullName>Policy_Version__c</fullName><defaultValue>'R360-POLICY-1.1'</defaultValue><label>Policy Version</label><length>80</length><required>true</required><trackHistory>true</trackHistory><type>Text</type></CustomField>