force-app/main/default/objects/Budget__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Budgets</relationshipLabel>
    <relationshipName>Submitted_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>