force-app/main/default/objects/Budget__c/fields/Travel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost__c</fullName>
    <formula>Onsite_Months__c * Travel_Rate__c * (1 + Expense_Contingency_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>