force-app/main/default/objects/Budget__c/fields/Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Travel_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Travel Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>