force-app/main/default/objects/Budget__c/fields/Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Uplift Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>