force-app/main/default/objects/Budget__c/validationRules/Budget_Inputs_Nonnegative.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Inputs_Nonnegative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Revenue__c &lt; 0, Base_Labour__c &lt; 0, Travel_Rate__c &lt; 0, Onsite_Months__c &lt; 0, Planned_Hours__c &lt; 0)</errorConditionFormula>
    <errorMessage>Budget values cannot be negative.</errorMessage>
</ValidationRule>